fixed overflow issues

--- a/main.css
+++ b/main.css
@@ -118,7 +118,7 @@
   background: rgba(0, 0, 0, 0.7);
   visibility: hidden;
   opacity: 0;
-  overscroll-behavior: contain;
+  overflow: auto;
 }
 .overlay:target {
   visibility: visible;
